# pynix

./: README.md  pyproject.toml
nix-docker/: Dockerfile  Makefile
pynix/: __init__.py  main.py  nix.py
