[tool.poetry]
name = "pynix"
version = "0.1.0"
description = ""
authors = ["Pete Dietl <petedietl@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
pynix = 'pynix:cli'

[tool.poetry.dependencies]
python = "^3.11"
jupytext = "^1.16.1"
click = "^8.1.7"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
mypy = "^1.9.0"
lxml = "^5.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
